# mini-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  logo.txt  main.py  pyproject.toml  requirements.txt
.assets/: logo.txt
.db/sqlite/: default
.db/tfidf/: chunks.json  matrix.npz  vectorizer.joblib
.local_models/sentence-transformers/all-MiniLM-L6-v2/: config_sentence_transformers.json
.models/sentence-transformers/all-MiniLM-L6-v2/: README.md  config_sentence_transformers.json  sentence_bert_config.json
.sqlite_db/: default
app/agent/: rag_agent.py
app/api/: dto.py  endpoints.py  server.py  ui_handler.py
app/bootstrap/: env_validator.py  health_checks.py  setup_wizard.py
app/cli/: console.py
app/config/: configer.py  logger.py  model_loader.py
app/ingestion/: chunker.py  converter.py  hasher.py  loader.py  pipeline.py
app/model/: chat_client.py  llm_client.py
app/orchestrator/: pipeline.py
app/retrieval/: embedder.py  indexer.py  persistor.py  ranker.py  sql_storage.py  vector_storage.py
app/utils/: helpers.py
data/markdowns/: E10 - Document 3.md  E3 Structure - Document 2.md  ICD - Document 1.md
data/output/: E3 Structure - Document 2.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cli/: page.tsx
frontend/app/models/: page.tsx
frontend/app/playground/: page.tsx
frontend/components/custom/: animated-beam-multiple-outputs.tsx  app-sidebar.tsx  (+5 more)
frontend/lib/: api.tsx  dataclasses.tsx
tests/: test_utils.py
(+10 files in other folders)
